--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta httpEquiv="Content-type" content="text/html; charset=utf-8" />
+    <meta charSet="utf-8" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+        name="viewport"
+        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta
+        name="description"
+        content=""
+    />
+    <meta
+        property="og:title"
+        content='Twenti.one : Together Stronger'
+    />
+    <meta
+        name="description"
+        property="og:description"
+        content='Twenti.one menyediakan layanan digital marketing lengkap mulai dari Social Media manajemen, Search Engine Optimization (SEO), Content Marketing hingga Event Organizer. Bersama-sama kita akan wujudkan keinginan Anda.'
+    />
+    <meta
+        property="og:image"
+        content='../src/static/images/logo.png'
+    />
+    <meta property="og:url" content='http://20one.id/' />
+    <meta property="og:type" content="website" />
+    <meta httpEquiv="Cache-control" content="no-cache" />
+    <meta httpEquiv="pragma" content="no-cache" />
+    <meta name="Referrer‐Policy" value="no‐referrer | same‐origin" />
+    <meta httpEquiv="Content‐Security‐Policy" content="script‐src 'self';" />
+    <meta name="robots" content='index' />
+    <meta name="googlebot" content='index' />
+    <title>Twenti.one : Together Stronger</title>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
+    <link rel="icon" sizes="192x192" href="./favicon.ico" />
+    <link rel="apple-touch-icon" href="./favicon.ico" />
+    <link rel="mask-icon" href="./favicon.ico" color="#49B882" />
+    <link rel="icon" href="favicon.ico" />
+    <link
+        rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+        crossOrigin="anonymous"
+    />
+    <link
+        rel="stylesheet canonical"
+        href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+        crossOrigin="anonymous"
+    />
+    <link href="./vendor/aos/aos.css" rel="stylesheet">
+    <link href="./vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="./vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="./vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="./vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+    <script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossOrigin="anonymous"
+    ></script>
+    <script
+        src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossOrigin="anonymous"
+    ></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossOrigin="anonymous"
+    ></script>
+    <script
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossOrigin="anonymous"
+    ></script>
+    <script src="./vendor/aos/aos.js"></script>
+    <script src="./vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="./vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="./vendor/php-email-form/validate.js"></script>
+    <script src="./vendor/purecounter/purecounter.js"></script>
+    <script src="./vendor/swiper/swiper-bundle.min.js"></script>
+</head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
