--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
     <script src="./vendor/php-email-form/validate.js"></script>
     <script src="./vendor/purecounter/purecounter.js"></script>
     <script src="./vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="./js/custom.js"></script>
 </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
